notebooks/attention_maps.ipynb: fix typo in folder name

--- a/notebooks/attention_maps.ipynb
+++ b/notebooks/attention_maps.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
     "%reload_ext tensorboard\n",
     "import tensorflow as tf\n",
     "import tensorboard as tb\n",
-    "%tensorboard --logdir tmp/tensoarboard/logs/"
+    "%tensorboard --logdir tmp/tensorboard/logs/"
    ]
   },
   {
