notebooks/attention_maps.ipynb: clarify how to open the colab

--- a/notebooks/attention_maps.ipynb
+++ b/notebooks/attention_maps.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "In order to directly visualize this page into a google colab you can do it in 2 different ways:\n",
     "- clone this repository and open this file locally, or\n",
-    "- Change this page domain from 'github.com' to 'githubtocolab.com', so open the following link: "
+    "- Change this notebook page domain from 'github.com' to 'githubtocolab.com' and it will be loaded within google colab"
    ]
   },
   {
