notebooks/attention_maps.ipynb: download and show audio files

--- a/notebooks/attention_maps.ipynb
+++ b/notebooks/attention_maps.ipynb
@@ -20,6 +20,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Download the tensorboard logged data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -59,6 +66,61 @@
     "\n",
     "os.remove(\"tmp/tensorboard.zip\")\n",
     "print(\"Data downloaded and extracted successfully!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Download sample audio files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ID=\"1WGfhZpU6qojWtTZkEQy9iv_V5zVMQHeB\"\n",
+    "ZIP_URL=\"https://drive.google.com/uc?id=\"+ID\n",
+    "\n",
+    "os.makedirs(\"tmp\", exist_ok=True)\n",
+    "gdown.download(ZIP_URL, \"tmp/audios_attn_weights.zip\", quiet=False)\n",
+    "\n",
+    "with zipfile.ZipFile(\"tmp/audios_attn_weights.zip\", 'r') as zip_ref:\n",
+    "    zip_ref.extractall(\"tmp\")\n",
+    "\n",
+    "os.remove(\"tmp/audios_attn_weights.zip\")\n",
+    "print(\"Data downloaded and extracted successfully!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load audio files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import Audio, display\n",
+    "\n",
+    "# display(Audio(\"tmp/audios_attn_weigths/Clamp.wav\", rate=16000, autoplay=True))\n",
+    "file_list = sorted(os.listdir(\"tmp/audios_attn_weights\"))\n",
+    "for file in file_list:\n",
+    "  print(file)\n",
+    "  display(Audio(filename=\"tmp/audios_attn_weights/\"+file, rate=441000))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load the TensorBoard notebook extension"
    ]
   },
   {
@@ -103,7 +165,6 @@
     }
    ],
    "source": [
-    "# Load the TensorBoard notebook extension\n",
     "%reload_ext tensorboard\n",
     "import tensorflow as tf\n",
     "import tensorboard as tb\n",
