notebooks/attention_maps.ipynb: remove comment and sampling rate

--- a/notebooks/attention_maps.ipynb
+++ b/notebooks/attention_maps.ipynb
@@ -109,11 +109,10 @@
    "source": [
     "from IPython.display import Audio, display\n",
     "\n",
-    "# display(Audio(\"tmp/audios_attn_weigths/Clamp.wav\", rate=16000, autoplay=True))\n",
     "file_list = sorted(os.listdir(\"tmp/audios_attn_weights\"), key=str.lower)\n",
     "for file in file_list:\n",
     "  print(file)\n",
-    "  display(Audio(filename=\"tmp/audios_attn_weights/\"+file, rate=441000))"
+    "  display(Audio(filename=\"tmp/audios_attn_weights/\"+file))"
    ]
   },
   {
