notebooks/attention_maps.ipynb: clarify what to explore in the last step

--- a/notebooks/attention_maps.ipynb
+++ b/notebooks/attention_maps.ipynb
@@ -119,7 +119,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load the TensorBoard notebook extension"
+    "## Load the TensorBoard dashboard\n",
+    "\n",
+    "Once the tensorboard is loaded, you can explore the attention maps for several files analyzed in the validation step."
    ]
   },
   {
